# src/spark_profiles/generated_control/models/jobs_response.py
@@ -6,7 +6,10 @@ from attrs import field as _attrs_field
 
 from ..types import UNSET, Unset
 
+from ..types import UNSET, Unset
 from typing import cast
+from typing import cast, Union
+from typing import Union
 
 if TYPE_CHECKING:
   from ..models.job_summary import JobSummary
@@ -24,9 +27,13 @@ class JobsResponse:
     """
         Attributes:
             jobs (list['JobSummary']):
+            total (int):
+            next_cursor (Union[None, Unset, str]):
      """
 
     jobs: list['JobSummary']
+    total: int
+    next_cursor: Union[None, Unset, str] = UNSET
 
 
 
@@ -41,12 +48,23 @@ class JobsResponse:
 
 
 
+        total = self.total
+
+        next_cursor: Union[None, Unset, str]
+        if isinstance(self.next_cursor, Unset):
+            next_cursor = UNSET
+        else:
+            next_cursor = self.next_cursor
+
 
         field_dict: dict[str, Any] = {}
 
         field_dict.update({
             "jobs": jobs,
+            "total": total,
         })
+        if next_cursor is not UNSET:
+            field_dict["next_cursor"] = next_cursor
 
         return field_dict
 
@@ -66,8 +84,22 @@ class JobsResponse:
             jobs.append(jobs_item)
 
 
+        total = d.pop("total")
+
+        def _parse_next_cursor(data: object) -> Union[None, Unset, str]:
+            if data is None:
+                return data
+            if isinstance(data, Unset):
+                return data
+            return cast(Union[None, Unset, str], data)
+
+        next_cursor = _parse_next_cursor(d.pop("next_cursor", UNSET))
+
+
         jobs_response = cls(
             jobs=jobs,
+            total=total,
+            next_cursor=next_cursor,
         )
 
         return jobs_response
